--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.4",
     "next": "15.3.0",
