--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.4",
@@ -29,7 +30,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "react-wrap-balancer": "^1.1.1",
+    "remark-gfm": "^4.0.1",
     "shadcn": "^2.4.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
